objects/LocationArea__c.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <description>The area associated with the location</description>
        <inlineHelpText>The area associated with the location</inlineHelpText>
        <label>Area</label>
        <referenceTo>Area__c</referenceTo>
        <relationshipLabel>Location Areas</relationshipLabel>
        <relationshipName>LocationAreas</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LocationAreaEID__c</fullName>
        <description>The Enterprise ID for this Location Area record.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this Location Area record.</inlineHelpText>
        <label>Location Area EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>The location associated with the area</description>
        <inlineHelpText>The location associated with the area</inlineHelpText>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Location Areas</relationshipLabel>
        <relationshipName>LocationAreas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Location Area</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Area__c</columns>
        <columns>Location__c</columns>
        <columns>LocationAreaEID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Location Area Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Location Areas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>